feat(patient): implement patient welcome onboarding
